# hipo

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  meson.build  meson.options
.github/: install-dependencies.sh  job_matrix.json
.github/workflows/: ci.yml
HipoDataFrame/: test_hipo_ds.cxx
ai/: Makefile  cluster.cpp  cluster.h  dcana.cpp  dcana.h  main.cc  track.cpp  track.h
cmake/: LZ4Config.cmake  hipo4.pc.in  hipo4Config.cmake.in
documents/: hipodoc.tex
documents/benchmark/: Makefile  Results.java  hipobench.bbl  hipobench.tex  references.bib
documents/description/: Makefile
examples/: Makefile  bankRowList.cc  builder.cc  dataframe.cc  histograms.cc  meson.build  multithread.cc  readEvents.cc  readFile.cc  readFileDebug.cc  readFileIterator.cc  readFileTags.cc  readFusion.cc  readHist.cc  readJson.cc  schema.cc  showFile.cc  tupleFile.cc  writeEvents.cc  writeFile.cc  writeFileComposite.cc  writeUserHeader.cc
examples/benchmarks/: Makefile  ana_benchmark.cc  map_benchmark.cc
examples/fortran/: Makefile  freader.F  meson.build
examples/root/: Benchmark.java  Makefile  Results.java  benchmark.cc  benchmark_ana.java  benchmark_hipo.cc  benchmark_hipo_ana.cc  benchmark_hipo_cwise.cc  benchmark_root.cc  converter.cc  hist2root.cc  meson.build  ramdisk.sh  runBenchmarks.sh  simulation2hipo.cc
examples/root/v7/: Makefile  convert.C  draw.C  process.C
examples/xrootd/: Makefile  getFileXrootd.cc  readFile.cc  readFileXrootd.cc
extensions/coda/: Makefile  README.md  decoder.cc  decoder.h  evioBankUtil.c  evioBankUtil.h  table.cc  table.h  translate.cc  translate_benchmark.cc
extensions/dataframes/: CMakeLists.txt  Doxygen.cfg  README.md  RHipoDS.cxx  RHipoDS.hxx  RHipoDS_LinkDef.h  meson.build  test_hipo_ds.cxx  test_hipo_speed.C  test_hipo_speed.cxx  test_root_speed.cxx
extensions/dataframes/cmake/: HipoDataFrameConfig.cmake.in
extensions/dc/: Makefile  README.md  benchmark.sh  cmdparser.hpp  datastream.h  denoise.cc  denoise2.cc  drift.cc  drift.h  thread.cc
extensions/dc/network/: cnn_autoenc_0f_112.json  cnn_autoenc_0f_112_original.json  cnn_autoenc_cpp.json  cnn_autoenc_produced.json
extensions/dc/submodules/: Makefile
extensions/julia/: README.md  benchmark.jl  hipoLib.jl  hipoPlot.jl  hipolib.jl  hipolib2.jl  plotbanks.jl  printbanks.jl  reaction.jl  vectors.jl
extensions/julia/lib/: Makefile  reaction.cc
extensions/julia/modules/: Hipo.jl  HipoLib.jl  Reaction.jl  Vector.jl  Vectors.jl
extensions/machine/: Makefile  analyze.cc  cluster.h  dcana.h  main.cc  track.cpp
extensions/python/: hipolib.py  readclas12.py  readfile.py
hipo4/: Makefile  bank.cpp  bank.h  datastream.cpp  datastream.h  dictionary.cpp  dictionary.h  event.cpp  event.h  fizika.h  fusion.cpp  fusion.h  hipoeventiterator.cpp  hipoeventiterator.h  jsonutil.h  meson.build  node.cpp  node.h  parser.cpp  parser.h  reaction.cpp  reaction.h  reader.cpp  reader.h  record.cpp  record.h  recordbuilder.cpp  recordbuilder.h  tuple.cpp  twig.h  utils.cpp  utils.h  wrapper.cpp  writer.cpp  writer.h
hipo4/chart/: ascii.h  color.h
java/: pom.xml
java/src/main/java/j4np/hipo5/examples/: ReadFile.java  WriteFile.java
meson/: Makefile_config.mk  meson.build  this_hipo.csh.in  this_hipo.sh.in  ubsan.supp
python/: hipolib.py  hiporeader.py
