option('dataframes',       type: 'boolean', value: true,  description: 'install HIPO dataframes extension')
option('install_examples', type: 'boolean', value: false, description: 'install examples')
option('test_file',        type: 'string',  value: '',    description: 'sample HIPO file to use for certain tests; if unspecified, those tests will not run; must be an absolute path')
option('test_fortran',     type: 'boolean', value: false, description: 'test Fortran example; you must have a Fortran compiler, and "test_file" option must be set')
