# examples
option('build_examples',   type: 'boolean', value: true,  description: 'build examples; see also "install_examples"')
option('install_examples', type: 'boolean', value: false, description: 'install examples; requires "build_examples" to be true')

# ROOT extensions and tools
option('dataframes',         type: 'boolean', value: true,  description: 'install HIPO dataframes extension')
option('install_root_tools', type: 'boolean', value: false, description: 'install ROOT tools such as "hipo_hist2root"')

# testing
option('test_file',    type: 'string',  value: '',    description: 'sample HIPO file to use for certain tests; if unspecified, those tests will not run; must be an absolute path')
option('test_fortran', type: 'boolean', value: false, description: 'test Fortran example; you must have a Fortran compiler and build option "test_file" must be set')
